--- a/HaoChiBao/app/src/main/res/layout/activity_shoping.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_shoping.xml
@@ -27,122 +27,53 @@
             android:textSize="@dimen/font_36" />
     </RelativeLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:background="@color/white"
+    android:orientation="horizontal">
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:orientation="horizontal"
-        android:background="@color/white">
-        <LinearLayout
-            android:id="@+id/shoping_nearby"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/text_nearby"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="附近"
-                android:textSize="@dimen/font_32"
-                android:textColor="@color/textBlack"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow"/>
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
-        <LinearLayout
-            android:id="@+id/shoping_content"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/text_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="购物"
-                android:textSize="@dimen/font_32"
-                android:textColor="@color/textBlack"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow"/>
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
-        <LinearLayout
-            android:id="@+id/shoping_rank"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/text_rank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="排序"
-                android:textSize="@dimen/font_32"
-                android:textColor="@color/textBlack"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow"/>
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
-        <LinearLayout
-            android:id="@+id/shoping_good_reputation"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/text_good_reputation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="好评"
-                android:textSize="@dimen/font_32"
-                android:textColor="@color/textBlack"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow"/>
-        </LinearLayout>
-    </LinearLayout>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/shoping_view_pager"
+        android:entries="@array/nearby"/>
+    <View
+        android:layout_width="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/lineGray"/>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:entries="@array/nearby"/>
+    <View
+        android:layout_width="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/lineGray"/>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:entries="@array/nearby"/>
+    <View
+        android:layout_width="1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/lineGray"/>
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:entries="@array/nearby"/>
+</LinearLayout>
+    <ListView
+        android:id="@+id/shopping_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
