--- a/HaoChiBao/app/src/main/res/layout/entertainment_list_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/entertainment_list_item.xml
@@ -4,12 +4,12 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
     <ImageView
-        android:id="@+id/entertainment_item_img"
+        android:id="@+id/item_img"
         android:layout_width="96dp"
         android:layout_height="80dp"
         android:src="@mipmap/entertainment_item_img"/>
     <LinearLayout
-        android:layout_toRightOf="@+id/entertainment_item_img"
+        android:layout_toRightOf="@+id/item_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -17,6 +17,7 @@
         android:layout_marginBottom="8dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:text="怪谈先生真人实景密室"
@@ -24,6 +25,7 @@
             android:textColor="@color/textBlack"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"/>
@@ -34,16 +36,18 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/entertainment_level"
-        android:layout_toRightOf="@+id/entertainment_item_img"
+        android:layout_toRightOf="@+id/item_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="15dp">
         <RatingBar
+            android:id="@+id/room_rating_bar"
             style="@style/roomRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:isIndicator="true"
             android:layout_margin="5dp" />
         <LinearLayout
             android:id="@+id/value_layout"
@@ -58,6 +62,7 @@
                 android:textColor="@color/textGrayBlack"
                 android:text="$"/>
             <TextView
+                android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/font_28"
@@ -76,18 +81,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/entertainment_item_img"
+        android:layout_toRightOf="@id/item_img"
         android:layout_below="@+id/entertainment_level"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_28"
             android:textColor="@color/textGrayBlack"
             android:text="大坪"/>
         <TextView
+            android:id="@+id/type"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
