--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -64,6 +64,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/image_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@mipmap/home_banner" />
