--- a/HaoChiBao/app/src/main/res/layout/activity_parking.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_parking.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/bgGrayWhite">
+    android:background="@color/bgGrayWhite"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -30,52 +31,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         android:background="@color/white"
-        android:orientation="horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:weightSum="1">
+
         <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:entries="@array/nearby"/>
+            android:layout_weight="0.06"
+            android:entries="@array/nearby"
+            android:gravity="right"></Spinner>
+
         <View
             android:layout_width="1dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
             android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:entries="@array/nearby"/>
-        <View
-            android:layout_width="1dp"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:entries="@array/nearby"/>
-        <View
-            android:layout_width="1dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineGray"/>
+            android:background="@color/lineGray" />
+
         <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:entries="@array/nearby"/>
+            android:layout_weight="0.23"
+            android:entries="@array/ranking"></Spinner>
     </LinearLayout>
+
 
     <ListView
         android:id="@+id/parking_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
