--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -88,31 +88,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:weightSum="1">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <Spinner
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nearby"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/font_32" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow" />
-        </LinearLayout>
+            android:layout_weight="0.06"
+            android:entries="@array/nearby"
+            android:gravity="right"></Spinner>
 
         <View
             android:layout_width="1dp"
@@ -121,85 +108,11 @@
             android:layout_marginTop="5dp"
             android:background="@color/lineGray" />
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <Spinner
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chaffy_dish"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/font_32" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/lineGray" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rank"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/font_32" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/lineGray" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/praise"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/font_32" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/entertainment_small_arrow" />
-        </LinearLayout>
+            android:layout_weight="0.23"
+            android:entries="@array/ranking"></Spinner>
     </LinearLayout>
 
     <View
