--- a/HaoChiBao/app/src/main/res/layout/activity_parking.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_parking.xml
@@ -31,34 +31,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:weightSum="1">
-
+        android:paddingBottom="10dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:gravity="center_horizontal">
         <Spinner
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.06"
+            android:gravity="right"
             android:entries="@array/nearby"
-            android:gravity="right"></Spinner>
-
+            android:layout_weight="0.06"></Spinner>
         <View
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:background="@color/lineGray" />
-
+            android:layout_marginBottom="5dp"
+            android:layout_height="match_parent"
+            android:background="@color/lineGray"/>
         <Spinner
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.23"
-            android:entries="@array/ranking"></Spinner>
+            android:entries="@array/ranking"
+            android:layout_weight="0.23"></Spinner>
     </LinearLayout>
-
 
     <ListView
         android:id="@+id/parking_list"
