评论、赞的网络请求和修改布局。

--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="16dp"
             android:drawablePadding="5dp"
             android:drawableRight="@mipmap/home_sw_resize"
-            android:text=""
+            android:text="@string/cq"
             android:textColor="@color/white"
             android:textSize="@dimen/font_40" />
 
