--- a/HaoChiBao/app/src/main/res/layout/item_hotpotlistview.xml
+++ b/HaoChiBao/app/src/main/res/layout/item_hotpotlistview.xml
@@ -113,6 +113,7 @@
                     android:text="赞" />
 
                 <TextView
+                    android:id="@+id/support"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="520" />
@@ -124,6 +125,7 @@
                     android:text="评论" />
 
                 <TextView
+                    android:id="@+id/comment"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
