--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv.xml
@@ -5,6 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
     <RelativeLayout
+        android:id="@+id/home_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/mainRed">
