--- a/HaoChiBao/app/src/main/res/layout/activity_find_lv_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find_lv_item.xml
@@ -10,6 +10,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/user_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -23,6 +24,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="无极"
@@ -35,6 +37,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/time"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -59,6 +62,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -78,6 +82,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/hotel_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -95,6 +100,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/hotel_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -115,6 +121,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/describe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
