实现用户分享网络数据请求，

--- a/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_homepage.xml
@@ -68,8 +68,8 @@
             <ImageView
                 android:id="@+id/image_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@mipmap/home_banner" />
+                android:layout_height="180dp"
+                android:background="@mipmap/ic_launcher" />
 
             <View
                 android:layout_width="match_parent"
@@ -197,8 +197,7 @@
             <ListView
                 android:id="@+id/homepage_lv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
+                android:layout_height="match_parent">
             </ListView>
         </LinearLayout>
     </ScrollView>
