--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -29,14 +29,10 @@
             android:textSize="@dimen/font_36" />
 
     </RelativeLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="18dp"
-        android:orientation="horizontal">
-
+        android:padding="10dp">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -76,9 +72,7 @@
             android:gravity="center_horizontal"
             android:text="@string/snack"
             android:textSize="@dimen/font_32" />
-
     </LinearLayout>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
