--- a/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
@@ -16,6 +16,7 @@
             android:src="@mipmap/my_head_portrait" />
 
         <TextView
+            android:id="@+id/user_level"
             android:layout_width="32dp"
             android:layout_height="15dp"
             android:layout_alignBottom="@+id/user_portrait"
@@ -54,6 +55,7 @@
                 android:textSize="@dimen/font_20" />
 
             <RatingBar
+                android:id="@+id/rating"
                 style="@style/roomRatingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -69,11 +71,13 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/comment_content" />
 
         <TextView
+            android:id="@+id/all_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="全文" />
@@ -86,17 +90,20 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/img_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/my_beauty_photo" />
 
         <ImageView
+            android:id="@+id/img_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:src="@mipmap/my_beauty_photo" />
 
         <ImageView
+            android:id="@+id/img_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -110,6 +117,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -121,6 +129,7 @@
             android:text="浏览" />
 
         <TextView
+            android:id="@+id/scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="362" />
@@ -132,12 +141,14 @@
             android:text="次" />
 
         <ImageView
+            android:id="@+id/praise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="7dp"
             android:src="@mipmap/remark_praise" />
 
         <ImageView
+            android:id="@+id/comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="7dp"
