--- a/HaoChiBao/app/src/main/res/layout/activity_comment.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_comment.xml
@@ -68,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:dividerHeight="10dp"
+            android:divider="@color/bgGrayWhite"
             android:background="@color/white">
         </ListView>
         <RelativeLayout
