--- a/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
+++ b/HaoChiBao/app/src/main/res/layout/comment_list_item.xml
@@ -59,7 +59,8 @@
                 style="@style/roomRatingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:isIndicator="true"/>
 
         </LinearLayout>
     </RelativeLayout>
@@ -158,7 +159,6 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/comment_square"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
